--- a/assets/package.json
+++ b/assets/package.json
@@ -4,12 +4,18 @@
     "esbuild-plugin-import-glob": "^0.1.1",
     "esbuild-svelte": "^0.8.1",
     "svelte": "^4.2.19",
-    "svelte-preprocess": "^6.0.2"
+    "svelte-preprocess": "^6.0.2",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
+    "bits-ui": "^0.21.13",
+    "clsx": "^2.1.1",
     "live_svelte": "file:../deps/live_svelte",
+    "lucide-svelte": "^0.437.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view"
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "tailwind-merge": "^2.5.2",
+    "tailwind-variants": "^0.2.1"
   }
 }
