--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -1,10 +1,20 @@
 {
-    "compilerOptions": {
-        "types": ["node"],
-        "baseUrl": ".",
-        "paths": {
-            "$lib": ["svelte"],
-            "$lib/*": ["svelte/*"]
-        }
-    }
+  "compilerOptions": {
+    "verbatimModuleSyntax": true,
+    "types": ["@types/node"],
+    "baseUrl": ".",
+    "paths": {
+      "$lib": ["svelte", "./src/lib"],
+      "$lib/*": ["svelte/*", "./src/lib/*"]
+    },
+    "moduleResolution": "bundler",
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "allowJs": true,
+    "checkJs": true,
+    "isolatedModules": true,
+    "module": "ESNext",
+    "outDir": "./dist"
+  },
+  "include": ["svelte"]
 }
